--- a/vercel.json
+++ b/vercel.json
@@ -1,9 +1,10 @@
 {
-  "version": 2,
+  
   "builds": [
     {
       "src": "mysite/wsgi.py",
       "use": "@vercel/python"
+      "config": {"maxLambdaSize": "15mb", "runtime": "python3.9"}
     }
   ],
   "routes": [
