--- a/vercel.json
+++ b/vercel.json
@@ -1,10 +1,12 @@
 {
-  
   "builds": [
     {
       "src": "mysite/wsgi.py",
-      "use": "@vercel/python"
-      "config": {"maxLambdaSize": "15mb", "runtime": "python3.9"}
+      "use": "@vercel/python",
+      "config": {
+        "maxLambdaSize": "15mb",
+        "runtime": "python3.9"
+      }
     }
   ],
   "routes": [
