--- a/requirements.txt
+++ b/requirements.txt
@@ -3,7 +3,7 @@ cachetools==5.5.0
 certifi==2024.8.30
 charset-normalizer==3.3.2
 dj-database-url==2.2.0
-Django==4.2.9
+Django==5.1.1
 google-auth==2.35.0
 google-auth-oauthlib==1.2.1
 gspread==6.1.2
@@ -24,3 +24,4 @@ sqlparse==0.5.1
 typing_extensions==4.12.2
 tzdata==2024.2
 urllib3==2.2.3
+whitenoise==6.7.0
